# prefect-on-k8s-instructions

./: .gitignore  Readme.md  env.example.py  main.py  pyproject.toml  storage.py
docs/: deploying_prefect_server_on_k8s.md  running_a_multifile_flow_on_prefect_in_k8s.md
tasks/: add_task.py  multiply_task.py
