[tool.poetry]
name = "prefect-on-k8s"
version = "0.1.0"
description = ""
authors = ["Petr Nazarov <pnazarov@yoobic.com>"]

[tool.poetry.dependencies]
python = "3.8.9"
prefect = "^0.15.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
